# 2bm-procedures

./: CHANGELOG.md  README.md  pyproject.toml
procedures/: __init__.py  calibrate_slit_blade_throw.py  centre_and_close_slits.py  detector_z_rail_alignment.py  nv200_trigger_step.py
procedures/_shared/: __init__.py  centroid.py  cora_log.py  epics.py  log.py  slits.py
